...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="112dp"
            android:gravity="center"
            android:text="Tommy Trojan"
...
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <ImageView
            android:id="@+id/changeUsername"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:padding="10dp"
            android:src="@drawable/ic_edit"
...
