...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_pop_window"
    android:backgroundTint="#edede9"
    android:elevation="2dp"
    android:id="@+id/userPopup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
...
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                tools:text="USC Viterbi school of eng" />

            <Button
                android:id="@+id/Message"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_below="@id/Major"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
...
