<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_inside_chat"
    tools:context=".chatsActivity.Inside_chat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
...
            android:text="Username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#403d39"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profile_pic_image_view"
            android:id="@+id/other_username"
            />

        <ImageView
            android:id="@+id/profile_pic_image_view"
            android:layout_width="52dp"
...
