<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:id="@+id/fragment_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e9edc9"
        android:padding="10dp"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/main_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traveler_s_playground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#403d39"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:padding="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_toolbar">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_below="@id/main_toolbar"
            android:id="@+id/postHome_recycler_view"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>